--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -58,3 +58,30 @@ jobs:
       - name: Terraform plan status
         if: steps.plan.outcome == 'failure'
         run: exit 1
+
+      ## Apply changes to the infrastructure
+      - name: Terraform Apply
+        id: apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve -input=false -parallelism=1 planfile
+
+      ##### Configure AWS Credentials
+      - name: Configure AWS Credentials 1
+        uses: aws-actions/configure-aws-credentials@v4.1.0
+        with:
+          aws-region: ${{ env.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      #### get kubeconfig file
+      - name: Get kubeconfig file
+        id: getconfig
+        if: steps.apply.outcome == 'success'
+        run: |
+          aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER }} --region ${{ env.AWS_REGION }}
+
+      #### Install Ingress Controller
+      - name: Install Ingress Controller
+        if: steps.apply.outcome == 'success' && steps.getconfig.outcome == 'success'
+        run: |
+          kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/aws/deploy.yaml
