--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - stage
     paths:
       - "terraform/**"
   pull_request:
@@ -62,7 +61,7 @@ jobs:
       ## Apply changes to the infrastructure
       - name: Terraform Apply
         id: apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/main'
         run: terraform apply -auto-approve -input=false -parallelism=1 planfile
 
       ##### Configure AWS Credentials
